--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@tensorflow-models/qna": "^1.0.2",
     "@tensorflow/tfjs": "^4.17.0",
+    "@tensorflow/tfjs-node": "^4.17.0",
     "node-fetch": "^3.3.2",
     "nuxt": "^3.10.1",
     "vue": "^3.4.15",
